2010-07-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Addictions/NSError+GNUstepBase.m:
	Declare _XOPEN_SOURCE so that glibc gives us the correct version of
	the strerror_r function.

2010-01-07  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GNUmakefile
	* Source/Makefile.postamble:
	Fix makefile to copy common.h into $GNUSTEP_TARGET_DIR so that it is
	found when building with a non-flattened namespace.

2010-07-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/CXXException.m: Fixup to get base to compile again.
	I think this API needs improving ... this should be an NSException
	subclass or category, and catching it should be transparent to the
	developer.

2010-06-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyedUnarchiver.m: Workaround for buggy inttypes.h on older
	Solaris systems.

2010-06-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSet.m: Fix incorrect return value in NSMutableSet's
	-classForCoder method.

2010-06-28  Quentin Mathe <quentin.mathe@gmail.com>

	* Tools/autogsdoc.m: Improved to search for .m files among the 
	command-line arguments in addition to the current directory and 
	documentation directory.

2010-06-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Remove the Object(NSObjectCompat) category as the
	use of the Object class is *really* obsolete, and also there appears
	to be an objc runtime bug whaich adds the category methods to NSZombie
	even though NSZombie is not a subclass of Object.
	* Tools/gdomap.c: Avoid strange hang when trying to register on port 0

2010-06-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Implement keyed coding
	* Source/NSBundle.m: When fetching a localised resource for a specific
	language, ignore the language list in the user preferences, and just
	look for that language asn for unlocalised data.

2010-06-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyedArchiver.m:
	* Source/NSKeyedUnarchiver.m: